--- a/Test/htmlTest/productosTest.html
+++ b/Test/htmlTest/productosTest.html
@@ -80,7 +80,7 @@
             <div class="info">
                 <img src="img/1.png" alt="" id="img">
                 <h2 id="modelo">NIKE MODEL 1</h2>
-                <p id="descripcion">Descripción Modelo 1</p>
+                <p id="descripcion">Descripción Modelo 1sssss</p>
 
                 <span class="precio" id="precio">$ 130</span>
 
